--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -41,6 +41,10 @@
   height: 100px;
   border-radius: 50%;
 }
+.spinner-grow {
+  width: 3rem;  /* 增大宽度 */
+  height: 3rem; /* 增大高度 */
+}
 
 .recipe-name {
   padding-top: 0.5em;
