--- a/src/app/recipe/recipe.component.html
+++ b/src/app/recipe/recipe.component.html
@@ -48,16 +48,17 @@
     </div>
 </div>
 
-
+<h2>Not satisfying?</h2>
  <button class="bottom-element button recipe-generation" (click)="sendRecipeRequest()">
-     Generate a recipe
+     Generate a new recipe
  </button>
-<div *ngIf="showedrecipe; else noRecipe">
-    <p>{{ showedrecipe }}</p>
+
+<div class="spinner-grow" role="status" *ngIf="isLoading">
+    <span class="visually-hidden">Loading...</span>
 </div>
-<ng-template #noRecipe>
-    <p>No recipe generated yet.</p>
-</ng-template>
+<p *ngIf="isLoading">Be patient</p>
+<p>It might take more than 1 minute</p>
+
 
 <!-- Similar setup for disliked recipes -->
 <app-bottom-navigation></app-bottom-navigation>
