--- a/src/app/families/families.component.scss
+++ b/src/app/families/families.component.scss
@@ -1,3 +1,4 @@
+@import "../../styles";
 .card {
   width: 90%;
   margin-left: 5%;
@@ -43,7 +44,6 @@
 #new-family, #create-family {
   width:80%;
   margin-left: 10%;
-
 }
 
 .nav {
