--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,6 +116,7 @@ app-bottom-navigation {
   justify-content: center;
   align-items: center;
   padding: 0 0 0 0;
+  background-color: $white;
 }
 
 .button-white {
@@ -173,6 +174,7 @@ app-bottom-navigation {
 
 #full-page {
   justify-content: center;
+  background-color: $white;
   //height: 100%;
 }
 
@@ -183,6 +185,7 @@ app-bottom-navigation {
 #page{
   display: flex;
   flex-direction: column;
+  background-color: $white;
 }
 
 
