--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -21,7 +21,7 @@
 }
 
 .recipe-card {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   padding: 16px;
   text-align: center;
@@ -54,6 +54,7 @@
     margin-left: 5%;
     margin-bottom: 3%;
     margin-right: 5%;
+    box-shadow: 0 4px 10px rgba(4, 25, 3, 0.1);
 
   }
   .card-body {
@@ -66,7 +67,7 @@
   }
   
   .user-container-text {
-    margin-top: 13px;
+    margin-top: 0;
   }
   
   .profile-picture {
@@ -79,6 +80,7 @@
   
   #family-id {
     font-size: 0.6em;
+    margin-bottom: 0;
   }
   
   #full-page {
