--- a/src/app/meal-plans/home/meal-plans-home.component.html
+++ b/src/app/meal-plans/home/meal-plans-home.component.html
@@ -17,7 +17,7 @@
     <section>
         <div class="family-container">
             <h2>Family 1</h2>
-            <button class="circular-button add" (click)="navigateToCalender()"></button>
+            <!--<button class="circular-button add" (click)="navigateToCalender()"></button>--> 
             <button class="circular-button plus" (click)="navigateToAddMealPlan()"></button>
             <!--<button class="circular-button plus" (click)="navigateToGroceryList()"></button> -->
         </div>
