--- a/src/app/meal-plans/calendar/meal-plans-calendar.component.html
+++ b/src/app/meal-plans/calendar/meal-plans-calendar.component.html
@@ -9,10 +9,10 @@
             <div *ngFor="let date of dates">
                 <div
                         class="calendar-date"
-                        [ngClass]="{ 'clicked': isDateClicked(date) }"
+                        [ngClass]="{ 'clicked': isDateClicked(date), 'past': date.past }"
                         (click)="onDateClick(date)"
                 >
-                    {{ date.date.getDate() }}
+                    {{ getDay(date) }}
                 </div>
             </div>
         </div>
