--- a/src/app/meal-plans/home/meal-plans-home.component.html
+++ b/src/app/meal-plans/home/meal-plans-home.component.html
@@ -14,9 +14,12 @@
     <img class="profile-image" src="assets/profile-pic.webp" alt="Profile Image">
 </div>
 <main>
-    <section *ngFor="let family of families">        <div class="family-container">
-        <h2>{{ family.family_name }}</h2>            <button class="circular-button add" (click)="navigateToCalender(family.family_id)"></button>
-        <button *ngIf="family.is_admin" class="circular-button plus" (click)="navigateToAddMealPlan()"></button>            <!--<button class="circular-button plus" (click)="navigateToGroceryList()"></button> -->
+    <section *ngFor="let family of families">
+        <div class="family-container">
+            <h2>{{ family.family_name }}</h2>
+            <button class="circular-button add" (click)="navigateToCalender(family.family_id)"></button>
+            <button class="circular-button plus" (click)="navigateToAddMealPlan()"></button>
+            <!--<button class="circular-button plus" (click)="navigateToGroceryList()"></button> -->
         </div>
         <div class="container mt-4">
             <div class="card bg-light">
@@ -26,7 +29,6 @@
                         <div class="card-header">{{day.day_of_week}}</div>
                         <ng-container *ngIf="day.users.length > 0; else noAttendees">
                             <p class="card-text">
-                                Attendees:
                                 <ng-container *ngFor="let user of day.users; let last = last">
                                     {{ user.user_name }}{{ !last ? ',' : '' }}
                                 </ng-container>
