--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,19 +1,33 @@
 <form [formGroup]="updateProfileForm" (ngSubmit)="updateProfile()" class="form-widget">
+    <!-- Input fields for first name and name -->
     <div>
-        <label for="fistname">fistName</label>
-        <input formControlName="firstname" id="fistname" type="text" />
+        <label for="firstname">First Name</label>
+        <input formControlName="firstname" id="firstname" type="text" />
     </div>
     <div>
         <label for="name">Name</label>
-        <input formControlName="name" id="name" type="url" />
+        <input formControlName="name" id="name" type="text" />
     </div>
 
+    <!-- Input for uploading a profile picture -->
+    <div>
+        <label for="profilePicture">Upload Profile Picture</label>
+        <input type="file" id="profilePicture" (change)="onFileInputChange($event)" accept="image/*" />
+    </div>
+
+    <!-- Display user profile picture -->
+    <div *ngIf="user?.picture_url">
+        <img [src]="user.picture_url" (error)="handleImageError(user)" alt="Profile Picture" />
+    </div>
+
+    <!-- Button to update profile -->
     <div>
         <button type="submit" class="button primary block" [disabled]="loading">
             {{ loading ? 'Loading ...' : 'Update' }}
         </button>
     </div>
 
+    <!-- Button to sign out -->
     <div>
         <button class="button block" (click)="signOut()">Sign Out</button>
     </div>
