--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -30,6 +30,12 @@
                 {{ loading ? 'Loading ...' : 'Update Profile' }}
             </button>
         </div>
+
+        <div class="text-center">
+        <button type="button" class="button" id="allergies" href="#" (click)="navigateToAllergies()">Change your allergies</button>
+        <button type="button" class="button" id="dietaryPreference" href="#" (click)="navigateToDietaryPreference()">Change your dietary preference</button>
+        </div>
+
         <div class="text-center bottom-element">
             <p>Sign out? Click <a href="register" (click)="signOut()">here</a></p>
         </div>
