--- a/src/app/meal-plans/calendar/meal-plans-calendar.component.html
+++ b/src/app/meal-plans/calendar/meal-plans-calendar.component.html
@@ -4,6 +4,7 @@
     <p class="flush-text">What will we have today?</p>
 </header>
 <main>
+    <h3> December </h3>
     <section>
         <div class="calendar">
             <div *ngFor="let date of dates">
@@ -17,6 +18,21 @@
             </div>
         </div>
     </section>
+    <h3> January </h3>
+    <section>
+        <div class="calendar">
+            <div *ngFor="let date of nextMonthDates">
+                <div
+                        class="calendar-date"
+                        [ngClass]="{ 'clicked': isDateClicked(date), 'past': date.past }"
+                        (click)="onDateClick(date)"
+                >
+                    {{ getDay(date) }}
+                </div>
+            </div>
+        </div>
+    </section>
     <div class="back-button-container">
         <button class="back-button" (click)="goBack()">Confirm attendances</button>
-    </div></main>
+    </div>
+</main>
