--- a/src/app/recipe/recipe-detail/recipe-detail.component.scss
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.scss
@@ -1,13 +1,8 @@
-h1 {
-  text-align: center;
-  color: #333;
-}
-
 .recipe-detail-card {
-  margin: 20px;
-  padding: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
+  width: 90%;
+  padding: 5% 5% 5% 5%;
+  margin-bottom: 50px;
 }
 
 .recipe-detail-image {
@@ -17,7 +12,6 @@ h1 {
 }
 
 h3 {
-  color: #555;
   margin-top: 20px;
 }
 
@@ -34,7 +28,19 @@ ul.ingredients, ul.allergies {
 }
 
 .steps {
-  margin-top: 20px;
   line-height: 1.6;
   color: #444;
+}
+
+#header {
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  width: 100%;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
