--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -55,3 +55,13 @@
   white-space: normal;
   font-size: 0.9em;
 }
+
+.recipe-generation {
+  margin-left: 16px;
+  margin-top: 10px;
+}
+
+#generate-button {
+  width: fit-content;
+}
+
