family and homepage update styling

--- a/src/app/families/family-create-modal/family-create-modal.component.html
+++ b/src/app/families/family-create-modal/family-create-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="exampleModalLabel">Create a new family</h4>
+    <h2><b>Create a new family</b></h2>
     <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
 </div>
 <div class="modal-body">
