--- a/src/app/families/family-modal-add/family-modal-add.component.html
+++ b/src/app/families/family-modal-add/family-modal-add.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="exampleModalLabel">{{ title }}</h4>
+    <h2><b>{{ title }}</b></h2>
     <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
 </div>
 <div class="modal-body" *ngIf="searchuser; else elseBlock">
