--- a/src/app/families/family-modal-leave/family-modal-leave.component.html
+++ b/src/app/families/family-modal-leave/family-modal-leave.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="exampleModalLabel">Are you certain you want to leave {{ family?.family_name }}?</h4>
+    <h2><b>Are you certain you want to leave {{ family?.family_name }}?</b></h2>
     <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
 </div>
 <div class="modal-footer">
