--- a/src/app/families/family-modal/family-modal.component.html
+++ b/src/app/families/family-modal/family-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="exampleModalLabel">Edit {{ family?.family_name }}</h4>
+    <h2><b>Edit {{ family?.family_name }}</b></h2>
     <button type="button" class="btn-close" aria-label="Close" (click)="modalRef.close()"></button>
 </div>
 <div class="modal-body">
@@ -11,7 +11,7 @@
     </div>
 </div>
 
-<div class="modal-footer">
+<div class="modal-footer no-line">
     <button type="button" class="button dark-gray" (click)="modalRef.close()">
         Close
     </button>
