--- a/src/app/families/family-modal/family-modal.component.scss
+++ b/src/app/families/family-modal/family-modal.component.scss
@@ -28,3 +28,32 @@
   flex-direction: column;
   justify-content: center;
 }
+
+.modal-header {
+  margin-bottom: 20px;
+  padding-bottom: 0;
+  align-content: center;
+  border-bottom: 0;
+}
+
+.modal-header h2 {
+  margin-bottom: 0;
+}
+
+.no-line{
+  border-top: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 20px;
+}
+
+.button {
+  padding: 4px 15px 4px 15px;
+}
+
+.modal-body {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  margin-top: 0;
+  padding-top: 0;
+}
