When an allergie is already pressed the color of the button is changed

--- a/src/app/register/allergies/allergies.component.scss
+++ b/src/app/register/allergies/allergies.component.scss
@@ -21,6 +21,10 @@
   transform: scale(0.98);
 }
 
+.button-white.selected {
+  background-color: $dark-green;
+}
+
 .button-back {
   border: none;
   min-width: 10%;
