--- a/src/app/register/allergies/allergies.component.html
+++ b/src/app/register/allergies/allergies.component.html
@@ -3,7 +3,7 @@
 <div id="full-page">
     <h1 class="text-center">What are your allergies?</h1>
     <div id="allergies">
-        <button class="button-white" *ngFor="let allergy of allergies" (click)="selectAllergies(allergy)">
+        <button class="button-white" *ngFor="let allergy of allergies" (click)="selectAllergies(allergy)" [class.selected]="isAllergySelected(allergy)">
             {{ allergy.allergie }} <!-- Access the 'allergie' property -->
         </button>
     </div>
