--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -4,10 +4,15 @@
   height: 10em;
   object-fit: cover;
   margin-bottom: 5%;
-  margin-top: 50%;
+  margin-top: 3em;
 }
 
 form {
   padding-right: 5%;
   padding-left: 5%;
+}
+
+#dietaryPreference {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
