--- a/src/app/register/dietary-preference/dietary-preference.component.html
+++ b/src/app/register/dietary-preference/dietary-preference.component.html
@@ -1,7 +1,7 @@
 <div id="full-page">
     <h1 class="text-center">What are your dietary preferences?</h1>
     <div id="allergies">
-        <button class="button-white" *ngFor="let ingredient of ingredients" (click)="selectDietaryPreference(ingredient)">
+        <button class="button-white" *ngFor="let ingredient of ingredients" (click)="selectDietaryPreference(ingredient)" [class.selected]="isDietaryPreferenceSelected(ingredient)">
             {{ ingredient.name }} <!-- Access the 'ingredient' property -->
         </button>
     </div>
