--- a/src/app/register/dietary-preference/dietary-preference.component.html
+++ b/src/app/register/dietary-preference/dietary-preference.component.html
@@ -6,7 +6,7 @@
         </button>
     </div>
     <div id="bottom-buttons">
-        <button class="button-back">🡄</button>
+        <button class="button-back" id="back" (click)="navigateBack()">🡄</button>
         <button class="button wide" id="continue" (click)="navigateToCongrats()">Continue</button>
     </div>
 </div>
