Fixt some buggs

--- a/src/app/meal-plans/generating/meal-plans-generating.component.scss
+++ b/src/app/meal-plans/generating/meal-plans-generating.component.scss
@@ -2,6 +2,7 @@
   position: relative;
   border-radius: 15px; /* Adjust the border radius as needed */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
 }
 
 .image-container {
