--- a/src/app/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipe/recipe-detail/recipe-detail.component.html
@@ -1,8 +1,6 @@
 <div id="full-page-center">
     <div id="header">
-        <button class="button-back col-2" (click)="goBack()">🡄</button>
-        <h2 class="text-center col-8">{{ name }}</h2>
-        <span class="col-2"></span>
+        <h2 class="text-center">{{ name }}</h2>
     </div>
 
     <div class="recipe-detail-card center">
@@ -41,5 +39,6 @@
             <p class="steps">{{ steps }}</p>
         </section>
     </div>
-
+    
 </div>
+<app-bottom-navigation></app-bottom-navigation>
