--- a/src/app/meal-plans/home/meal-plans-home.component.scss
+++ b/src/app/meal-plans/home/meal-plans-home.component.scss
@@ -1,13 +1,53 @@
-
+@import "../../../styles";
 .scrollable-card-container {
-  white-space: nowrap;
+
+}
+
+.meal-card{
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding: 16px;
+  margin: 8px;
+  background-color: $white;
+  width: 300px;
+  height: 250px;
+  //display: inline-block; /* Display inline with block features */
+}
+
+.meal-card-container {
+  border-radius: 8px;
+  padding: 16px;
+  background-color: $light-green;
+  width: fit-content;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
   overflow-x: auto;
 }
 
-.card {
-  display: inline-block;
-  width: 18rem;
-  margin-right: 20px;
+.recipe {
+  flex-wrap: wrap;
+  width: 300px;
+  margin-top: 0;
+}
+
+.text-large {
+  margin-bottom: 0;
+}
+
+.round-img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 15px;
+}
+
+.card-column {
+  width: 50%; /* Two equal-width columns */
+  box-sizing: border-box; /* Include padding and border in the total width */
+  padding: 0 10px; /* Adjust padding as needed */
+  text-align: center; /* Center the content in the column */
 }
 
 .attend {
@@ -59,13 +99,6 @@
   align-self: center;
   background-image: url('/assets/plus.png');
   background-size: 50% 50%;
-}
-
-.refresh {
-  margin-right: 20px;
-  align-self: center;
-  background-image: url('/assets/refresh.png');
-  background-size: 60% 60%;
 }
 
 .card-footer {
