--- a/src/app/meal-plans/generating/meal-plans-generating.component.scss
+++ b/src/app/meal-plans/generating/meal-plans-generating.component.scss
@@ -1,14 +1,14 @@
 .card {
   position: relative;
-  border-radius: 15px; /* Adjust the border radius as needed */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px; /* Adjust the border radius as needed */
+  box-shadow: 0 4px 10px rgba(4, 25, 3, 0.2);
   margin-bottom: 20px;
 }
 
 .image-container {
   position: absolute;
   top: 50%;
-  right: 10px;
+  right: 15px;
   transform: translateY(-50%);
   width: 50px;
   height: 50px;
@@ -29,4 +29,26 @@
   width: 100%;
   height: auto;
   border-radius: 50%;
+}
+
+h1 {
+  margin-bottom: 0;
+}
+
+#header {
+  margin-top: 0;
+}
+
+.card-title {
+  margin-bottom: 0;
+}
+
+.card-text {
+  margin-top: 0;
+}
+
+.button {
+  margin-left: 20%;
+  margin-right: 20%;
+  width: 60%;
 }
