--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <div *ngIf="!recipes;" class="empty-state">
             <p id="not-available"><i>No upcoming meals available.</i></p>
         </div>
-        <div *ngFor="let recipe of recipes; let i = index" class="recipe-small-view">
+        <div *ngFor="let recipe of recipes; let i = index" class="recipe-small-view" (click)="navigateToRecipeDetail(recipes[i].recipe)">
             <div class="recipe-card">
                 <img [src]="urlUpcoming[i]" alt="Image of {{ recipe.recipe }}" class="recipe-image">
                 <p class="recipe-name">{{ recipe.recipe_name }}</p>
@@ -18,6 +18,9 @@
 
     <h2>Preferred Recipes</h2>
     <div class="boxes">
+        <div *ngIf="!preferredRecipes;" class="empty-state">
+            <p id="not-available"><i>User has no preferred recipes.</i></p>
+        </div>
         <div *ngFor="let preferredRecipe of preferredRecipes; let i = index" class="recipe-small-view">
             <div class="recipe-card">
                 <img [src]="urlPreferred[i]" alt="Image of {{ preferredRecipe.recipe }}" class="recipe-image" (click)="navigateToRecipeDetail(preferredRecipes[i].recipe)">
