--- a/src/app/meal-plans/modal-generating/modal-generating.component.scss
+++ b/src/app/meal-plans/modal-generating/modal-generating.component.scss
@@ -1,8 +1,8 @@
 .recipe-cards {
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
-  align-items: center;
-  margin-bottom: 10px;
+  vertical-align: top;
 }
 
 .recipe-card {
@@ -12,6 +12,8 @@
   text-align: center;
   margin: 8px;
   background-color: #EEF2ED;
+  width: 7em;
+  hight: 7em;
 }
 
 .recipe-card.selected {
@@ -19,11 +21,42 @@
 }
 
 .recipe-image {
-  width: 100px;
-  height: 100px;
+  width: 5em;
+  height: auto;
   border-radius: 50%;
 }
 
 .recipe-name {
   margin-top: 8px;
+  overflow: hidden;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  font-size: 0.9em;
+  width: 100%
+}
+.modal-header {
+  padding-bottom: 0;
+  align-content: center;
+  border-bottom: 0;
+}
+
+.modal-header h2 {
+  margin-bottom: 0;
+}
+
+.modal-footer {
+  border-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 20px;
+}
+
+.modal-body {
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.button {
+  margin-bottom: 0;
+  padding: 4px 15px 4px 15px;
 }
