--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -39,7 +39,7 @@
         <br>
 
         <div class="text-center bottom-element">
-            <p>Sign out? Click <a href="register" (click)="signOut()">here</a></p>
+            <p>Sign out? Click <a href="login" (click)="signOut()">here</a></p>
         </div>
 
     </form>
