--- a/src/app/register/allergies/allergies.component.html
+++ b/src/app/register/allergies/allergies.component.html
@@ -8,7 +8,7 @@
         </button>
     </div>
     <div id="bottom-buttons">
-        <button class="button-back">🡄</button>
+        <button class="button-back" id="back" (click)="navigateBack()">🡄</button>
         <button class="button wide" id="continue" (click)="navigateToDietaryPreference()">Continue</button>
     </div>
 </div>
