--- a/src/app/register/dietary-preference/dietary-preference.component.html
+++ b/src/app/register/dietary-preference/dietary-preference.component.html
@@ -7,6 +7,6 @@
     </div>
     <div id="bottom-buttons">
         <button class="button-back" id="back" (click)="navigateBack()">🡄</button>
-        <button class="button wide" id="continue" (click)="navigateToCongrats()">Continue</button>
+        <button class="button wide" id="continue" (click)="navigateToProfile()">Continue</button>
     </div>
 </div>
