--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 
 $black: #041903;
 $white: #FDFFFC;
-$light-green: #dbe8db;
+$light-green: #e7f1e7;
 $medium-green: #406E3D;
 $dark-green: #204C1D;
 $dark-gray: #707070;
