added date of upcoming meal to homepage, made them clickable, general styling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -91,6 +91,14 @@ p {
   color: $white;
 }
 
+.white {
+  background-color: $white;
+}
+
+.light-green {
+  background-color: $light-green;
+}
+
 .medium-green {
   background-color: $medium-green;
 }
