--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -25,8 +25,7 @@
   border-radius: 8px;
   padding: 16px;
   text-align: center;
-  margin: 8px;
-  background-color: $light-green;
+  margin: 0 8px 8px;
   position: relative; /* Needed for absolute positioning of the heart button */
   width: 150px; /* Fixed width */
   height: 200px; /* Fixed height */
@@ -49,10 +48,16 @@
   font-size: 0.9em;
 }
 
+.recipe-date {
+  margin: 0 0 2px;
+  color: $dark-gray;
+  font-size: 0.8em;
+}
+
   .card {
     width: 90%;
     margin-left: 5%;
-    margin-bottom: 3%;
+    margin-bottom: 15px;
     margin-right: 5%;
     box-shadow: 0 4px 10px rgba(4, 25, 3, 0.2);
 
