--- a/src/app/meal-plans/home/meal-plans-home.component.html
+++ b/src/app/meal-plans/home/meal-plans-home.component.html
@@ -10,7 +10,7 @@
             <h2>{{ family.family_name }}</h2>
             <button class="circular-button add" (click)="navigateToCalender(family.family_id)"></button>
             <button *ngIf="family.is_admin" class="circular-button plus" (click)="navigateToAddMealPlan(family.family_id)"></button>
-            <button *ngIf="family.is_admin" class="circular-button plus" (click)="navigateToGroceryList()"></button>
+            <button *ngIf="family.is_admin" class="circular-button cart" (click)="navigateToGroceryList()"></button>
         </div>
 
         <div class="scrollable-card-container">
