--- a/src/app/register/dietary-preference/dietary-preference.component.scss
+++ b/src/app/register/dietary-preference/dietary-preference.component.scss
@@ -22,7 +22,8 @@
 }
 
 .button-white.selected {
-  background-color: $dark-green;
+  background-color: $medium-green;
+  color: $white;
 }
 
 .button-back {
