--- a/src/app/recipe/recipe.component.scss
+++ b/src/app/recipe/recipe.component.scss
@@ -34,6 +34,7 @@
   width: 150px; /* Fixed width */
   height: 200px; /* Fixed height */
   display: inline-block; /* Display inline with block features */
+  color: $light-green;
 }
 
 .recipe-image {
