--- a/src/app/grocery-list/grocery-list.component.html
+++ b/src/app/grocery-list/grocery-list.component.html
@@ -1,19 +1,19 @@
 <div>
     <h1>Grocery List</h1>
-    <div *ngIf="groceryList.length > 0; else loadingTemplate">
+    <div *ngIf="groceryList && groceryList.length > 0">
         <ul>
             <li *ngFor="let item of groceryList">
-                {{ item | json }}
+                <p>ID: {{ item.id }}</p>
+                <p>Name: {{ item.name }}</p>
+                <p>Unit: {{ item.unit }}</p>
+                <p>Quantity: {{ item.quantity }}</p>
             </li>
         </ul>
     </div>
-    <ng-template #loadingTemplate>
-        <p>Loading...</p>
-    </ng-template>
-    <div *ngIf="groceryList.length === 0 && !loadingTemplate">
+    <div *ngIf="!groceryList || groceryList.length === 0">
         <p>No items found in the grocery list.</p>
     </div>
-    <div class="back-button-container">
-        <button class="back-button" (click)="goBack()">Confirm attendances</button>
+    <div class="text-center bottom-element">
+        <button class="button wide primary block center" (click)="goBack()">Go back</button>
     </div>
 </div>
