--- a/src/app/meal-plans/home/meal-plans-home.component.html
+++ b/src/app/meal-plans/home/meal-plans-home.component.html
@@ -20,7 +20,7 @@
                     <div class="meal-card" *ngFor="let day of family.mealplans">
                         <div class="card-body">
                             <p class="text-large"><b>{{day.day_of_week}}</b></p>
-                            <p class="recipe">{{day.name}}</p>
+                            <p class="recipe">{{day.recipe_name}}</p>
                             <div class="row">
                                 <div class="col text-center center">
                                     <img src="{{day.url}}" class="round-img ">
