--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,10 +5,10 @@
             <label for="profilePicture" class="profile-picture-label">
                 <img *ngIf="user?.picture_url" [src]="user.picture_url" (error)="handleImageError(user)" alt="Profile Picture" class="profile-picture" />
                 <input style="display: none;" type="file" id="profilePicture" (change)="onFileInputChange($event)" accept="image/*" />
+                <p>Click on your profile picture to change it</p>
             </label>
         </div>
         <h2 class="text-center">{{profile.first_name}} {{profile.name}}</h2>
-
         <p>Click to change your preferences</p>
         <button type="button" class="button-gray-border"  href="#" (click)="navigateToAllergies()">Change your allergies</button>
         <button type="button" class="button-gray-border" id="dietaryPreference" href="#" (click)="navigateToDietaryPreference()">Change your dietary preference</button>
