--- a/src/app/meal-plans/home/meal-plans-home.component.html
+++ b/src/app/meal-plans/home/meal-plans-home.component.html
@@ -9,7 +9,7 @@
         <div class="family-container">
             <h2>{{ family.family_name }}</h2>
             <button class="circular-button add" (click)="navigateToCalender(family.family_id)"></button>
-            <button *ngIf="family.is_admin" class="circular-button plus" (click)="navigateToAddMealPlan(family.family_id)"></button>
+            <button *ngIf="family.is_admin" class="circular-button plus" (click)="navigateToAddMealPlan(family.family_id, family.family_name)"></button>
             <button *ngIf="family.is_admin" class="circular-button cart" (click)="navigateToGroceryList()"></button>
         </div>
 
