--- a/src/app/meal-plans/generating/meal-plans-generating.component.html
+++ b/src/app/meal-plans/generating/meal-plans-generating.component.html
@@ -1,5 +1,5 @@
 
-<h1><b>Generating New Plan</b></h1>
+<h1><b>Generating New Plan For {{family_name}}</b></h1>
 <p id="header">Let's decide what we will have next week.</p>
 <br>
     <div *ngFor="let day of days" class="card" (click)="openModal(day.day_of_week)">
@@ -17,7 +17,7 @@
                     <p class="card-text"></p>{{ day.name }}
                 </ng-container>
                 <ng-template #noRecipe>
-                    <p id="not-available">Click on the + icon to select a recipe.</p>
+                    <p class="card-text light-gray-text">Click to select a dish</p>
 
                 </ng-template>
 
