--- a/src/app/meal-plans/home/meal-plans-home.component.html
+++ b/src/app/meal-plans/home/meal-plans-home.component.html
@@ -5,6 +5,7 @@
 <div id="page" class="bottom-element">
     <app-default-header [title]= "'Your Meal-Plans'" [subtitle]="'What will we have today?'"> </app-default-header>
     <br>
+    <p>{{message}}</p>
     <section *ngFor="let family of families">
         <div class="family-container">
             <h2>{{ family.family_name }}</h2>
