--- a/src/app/meal-plans/modal-generating/modal-generating.component.html
+++ b/src/app/meal-plans/modal-generating/modal-generating.component.html
@@ -4,6 +4,7 @@
 </div>
 <div class="modal-body">
   <div class="recipe-cards">
+    <p>{{message}}</p>
     <div class="recipe-card-outer text-center" *ngFor="let recipe of liked_recipes" >
       <div class="recipe-card" [class.selected]="recipe.isSelected"  (click)="selectRecipe(recipe, combined_recipes)">
         <img [src]="recipe.url" alt="Recipe Image" class="recipe-image">
