--- a/src/app/meal-plans/modal-generating/modal-generating.component.html
+++ b/src/app/meal-plans/modal-generating/modal-generating.component.html
@@ -1,10 +1,11 @@
 <div class="modal-header">
-  <h2>Pick a favorite</h2>
+  <p class="not-available">{{message}}</p>
+  <h2 *ngIf="message == ''">Pick a favorite</h2>
   <button type="button" class="btn-close" aria-label="Close" (click)="closeModal()"></button>
 </div>
 <div class="modal-body">
   <div class="recipe-cards">
-    <p>{{message}}</p>
+
     <div class="recipe-card-outer text-center" *ngFor="let recipe of liked_recipes" >
       <div class="recipe-card" [class.selected]="recipe.isSelected"  (click)="selectRecipe(recipe, combined_recipes)">
         <img [src]="recipe.url" alt="Recipe Image" class="recipe-image">
@@ -13,7 +14,7 @@
     </div>
   </div>
 
-  <h2>Or try something new</h2>
+  <h2 *ngIf="message == ''">Or try something new</h2>
   <div class="recipe-cards">
     <div class="recipe-card-outer text-center" *ngFor="let recipe of Nonliked_recipes" >
       <div *ngIf="!Nonliked_recipes;" class="empty-state">
@@ -29,5 +30,5 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="button dark-gray" aria-label="Close" (click)="closeModal()">Close</button>
-  <button type="button" class="button dark-green" (click)="submitSelection(combined_recipes)">Save changes</button>
+  <button type="button" class="button dark-green" *ngIf="message == ''" (click)="submitSelection(combined_recipes)">Save changes</button>
 </div>
